k8s_jenkins/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
      - name: weather
        image: barminz/weather_k8s:1
        ports:
        - containerPort: 9090
